--- a/style.css
+++ b/style.css
@@ -37,3 +37,47 @@ body {
     transform: translateY(5px);
     transition: 0.2s;
 }
+#toggle.active::before {
+    transform: translateY(0px) rotate(45deg);
+}
+#toggle.active::after {
+    transform: translateY(0px) rotate(-45deg);
+}
+#sidebar {
+    position: fixed;
+    top: 0;
+    left: -300px;
+    width: 300px;
+    height: 100vh;
+    background: #003147;
+    transition: 0.5s;
+}
+#sidebar.active {
+    left: 0px;
+}
+#sidebar ul {
+    position: relative;
+    margin-top: 50px;
+}
+#sidebar ul li {
+    list-style: none;
+    display: inline-block;
+    width: 100%;
+    padding: 10px 40px;
+}
+#sidebar ul li:hover {
+    background: #03a9f4;
+}
+#sidebar ul li a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 1.5em;
+    letter-spacing: 2px;
+}
+
+@media screen and (max-width:576px) {
+    #sidebar {
+        left: -70%;
+        width: 70%;
+    }
+}
